// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Divider Dashed 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <hr
      class="sc-ikJzcn EGMhf sc-hiCivh cMgYW"
      type="dashed"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <hr
      class="sc-ikJzcn blqzkB sc-hiCivh cMgYW"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider With Custom Color 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <hr
      class="sc-ikJzcn ihKoNM sc-hiCivh jpeDOu"
      color="#ccc"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider With Text Content 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-gKckTs jhmBNr sc-iCfLBT cEOlPK sc-hGPAah gcFPXo sc-hiCivh cMgYW"
    >
      <hr
        class="sc-ikJzcn sc-jJoQpE EGMhf cJmPRF"
        type="dashed"
      />
      <span
        class="sc-fKVsgm hjxFYR sc-iwjezw huFwl"
      >
        some text
      </span>
      <hr
        class="sc-ikJzcn sc-jJoQpE EGMhf cJmPRF"
        type="dashed"
      />
    </div>
  </div>
</div>
`;
